--- a/src/normalize.css
+++ b/src/normalize.css
@@ -141,7 +141,7 @@ table {
 a {
   color: #ccd6f6;
 
-  text-decoration-style: dashed;
+  text-decoration-style: solid;
   transition: 0.2s ease-in;
 }
 
